--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,16 @@
 }
 
 .wrapper {
-  border: 1px solid grey;
-  padding: 100px;
+  border: 2px solid grey;
+  padding: 50px;
   text-align: left;
+  background-image: linear-gradient(70deg, #d1d153, #ee7cee, 48%, #499edf);
+}
+
+div h1 {
+  color: white;
+  text-align: center;
+  background-image: linear-gradient(70deg, #ee7cee, 48%, #499edf);
 }
 
 .about{
@@ -58,6 +65,10 @@
   align-items: center;
   justify-content: center;
   color: white;
+  background-image: linear-gradient(79deg, #d1d153, #ee7cee, 48%, #499edf);
+}
+
+.profile {
   background-image: linear-gradient(79deg, #d1d153, #ee7cee, 48%, #499edf);
 }
 
