--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,11 @@ div h1 {
   text-decoration: underline;
 }
 
+.link-btn1 {
+  background: #7439db;
+  color: white;
+}
+
 button {
   border: none;
   background-color: white;
@@ -124,5 +129,11 @@ card {
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   cursor: pointer;
   transition: 0.4s;
+}
+
+.storewrap {
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
 }
 
