--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,11 @@
   }
 }
 
+.home {
+  text-align:center;
+  background-image: linear-gradient(70deg, #d1d153, #ee7cee, 48%, #499edf);
+}
+
 .wrapper {
   border: 2px solid grey;
   padding: 50px;
